# google-flights-agent

./: flight_alerts.py  pyproject.toml
.github/workflows/: cron.yml
